tests/errors/magic_constant_casing.php
<?php

declare(strict_types=1);

$a = __dir__;
